--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -4,6 +4,7 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{wasysym}
+\usepackage{listings}
 
 \usetheme{Warsaw}
 \usecolortheme{lily}
@@ -30,6 +31,7 @@
 \end{frame}
 
 \input{coalgebra}
+\input{modifyproblem}
 
 \begin{frame}
 \frametitle{Title of the Next Slide}
