--- a/coalgebra.tex
+++ b/coalgebra.tex
@@ -1,10 +1,11 @@
 \begin{frame}
-\frametitle{CoState Comonad Coalgebra}
+\frametitle{Lens is CoState Comonad Coalgebra}
 
 \begin{block}{It is true}
   \begin{itemize}
-  \item a Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}
-  \item this implies that...
+  \item A Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}
+  \item This is a concise, fully-describing statement, so we can go home now...
+  \item ...or we can examine the implications
   \end{itemize}
 \end{block}
 \end{frame}
