--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -1,10 +1,14 @@
 \documentclass{beamer}
+\usepackage{amsmath}
 \usepackage[utf8]{inputenc}
 \usepackage{graphics}
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{wasysym}
 \usepackage{listings}
+\usepackage{tikz}
+\usepackage{amssymb}
+\usepackage{verbatim}
 
 \usetheme{Warsaw}
 \usecolortheme{lily}
@@ -32,13 +36,6 @@
 
 \input{coalgebra}
 \input{modifyproblem}
-
-\begin{frame}
-\frametitle{Title of the Next Slide}
-\begin{block}{Title of a next block}
-  blah blah
-\end{block}
-\end{frame}
 
 \end{document}
 
