--- a/coalgebra.tex
+++ b/coalgebra.tex
@@ -4,8 +4,8 @@
 \begin{block}{It is true}
   \begin{itemize}
   \item A Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}
-  \item This is a concise, fully-describing statement, so we can go home now...
-  \item ...or we can examine the implications
+  \item This is a concise, fully-describing statement, so we can go home now\ldots
+  \item \ldots or we can examine the implications
   \end{itemize}
 \end{block}
 \end{frame}
