--- a/coalgebra.tex
+++ b/coalgebra.tex
@@ -3,7 +3,7 @@
 
 \begin{block}{It is true}
   \begin{itemize}
-  \item A Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}\footnote{\emph{Russell O'Connor}}
+  \item A Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}\footnote{\emph{hat-tip Russell O'Connor}}
   \item This is a concise, fully-describing statement, so we can go home now\ldots
   \item \ldots or we can examine the implications
   \end{itemize}
