--- a/modifyproblem.tex
+++ b/modifyproblem.tex
@@ -18,3 +18,17 @@
 
 \end{frame}
 
+\begin{frame}
+\frametitle{It Gets Worse}
+
+\begin{itemize}
+\item Worse still, we would have to write many other functions and  per record field
+  \begin{itemize}
+  \item \lstinline[language=haskell]$setName :: String -> Person -> Person$
+  \item \lstinline[language=haskell]$setNameAddress :: (String, Address) -> Person -> Person$
+  \end{itemize}
+\item Worse again, we would have to do this as record fields are embedded
+\end{itemize}
+
+\end{frame}
+
