--- a/modifyproblem.tex
+++ b/modifyproblem.tex
@@ -10,40 +10,50 @@
 \begin{frame}
 \frametitle{The \lstinline$modify$ Problem}
 
+\begin{block}{For example}
 \begin{itemize}
 \item Supposing we wish to reverse or upper-case a person's name
 \item \lstinline[language=haskell]$modifyName :: (String -> String) -> Person -> Person$
 \item We have to write this function for \emph{every} record field.
 \end{itemize}
+\end{block}
 
 \end{frame}
 
 \begin{frame}
 \frametitle{It Gets Worse}
 
+\begin{block}{Code blowout}
 \begin{itemize}
-\item Worse still, we would have to write many other functions and  per record field
+\item Worse still, we have to write many other functions, per record field
   \begin{itemize}
   \item \lstinline[language=haskell]$setName :: String -> Person -> Person$
   \item \lstinline[language=haskell]$setNameAddress :: (String, Address) -> Person -> Person$
   \end{itemize}
 \end{itemize}
+\end{block}
 
-\begin{frame}
+\end{frame}
+
+\begin{frame}[fragile]
 \frametitle{And Even Worse}
 
+\begin{block}{Urg, Puke!}
 \begin{itemize}
-\item Worse still, we would have to write many other functions and  per record field
-  \begin{itemize}
-  \item These functions must be written as record fields are embedded
-  \item How to set a person's suburb?
-    \begin{lstlisting}[label=lst:Lens_product_type,language=haskell]
-    data Hi
-    \end{lstlisting}
+\item These functions must also be written as record fields are embedded
+\item How to set a person's suburb?
+\begin{lstlisting}[language=haskell]
+setSuburb :: String -> Person -> Person
+setSuburb s p = p {
+  address = address p {
+    suburb = s
+  }
+}
+\end{lstlisting}
+\item ``My code looks like a gigantic Greater Than symbol!''
 
-  \end{itemize}
 \end{itemize}
-
+\end{block}
 
 \end{frame}
 
