--- a/coalgebra.tex
+++ b/coalgebra.tex
@@ -5,7 +5,7 @@
   \begin{itemize}
   \item A Lens is exactly the Coalgebra for the CoState Comonad\footnote{perhaps better known as the Store Comonad}\footnote{\emph{hat-tip Russell O'Connor}}
   \item This is a concise, fully-describing statement, so we can go home now\ldots
-  \item \ldots or we can examine the implications
+  \item \ldots or we can examine the practical implications
   \end{itemize}
 \end{block}
 \end{frame}
