--- a/composinglenses.tex
+++ b/composinglenses.tex
@@ -45,5 +45,13 @@ Lens Person Address
 
 \end{block}
 
+\begin{block}{Example Semigroupoids}
+\begin{itemize}
+\item \lstinline$(->)$
+\item \lstinline$Monad m => Kleisli m$
+\item \lstinline$Lens$
+\end{itemize}
+\end{block}
+
 \end{frame}
 
