--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -40,5 +40,11 @@
 \input{composinglenses}
 \input{lenslibraries}
 
+% TODO
+% lens laws
+% lens state -> imperative programming
+% partial lenses
+% appendix
+
 \end{document}
 
