--- a/lenslibraries.tex
+++ b/lenslibraries.tex
@@ -87,4 +87,14 @@ distribute ::
 \end{block}
 
 \end{frame}
+\begin{frame}[fragile]
+\frametitle{Lens Values}
+
+\begin{block}{First Lens}
+\begin{lstlisting}[language=haskell]
+sdf
+\end{lstlisting}
+\end{block}
+
+\end{frame}
 
