--- a/modifyproblem.tex
+++ b/modifyproblem.tex
@@ -38,7 +38,7 @@
 \begin{frame}[fragile]
 \frametitle{And Even Worse}
 
-\begin{block}{Urg, Puke!}
+\begin{block}{EEK!}
 \begin{itemize}
 \item These functions must also be written as record fields are embedded
 \item How to set a person's suburb?
