--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -8,6 +8,7 @@
 \usepackage{listings}
 \usepackage{tikz}
 \usepackage{amssymb}
+\usepackage{textcomp}
 \usepackage{verbatim}
 
 \usetheme{Warsaw}
@@ -39,6 +40,7 @@
 \input{introducinglenses}
 \input{composinglenses}
 \input{lenslibraries}
+\input{partiallenses}
 
 % TODO
 % lens laws
