--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -41,13 +41,11 @@
 \input{composinglenses}
 \input{lenslibraries}
 \input{partiallenses}
+\input{languagesupport}
+\input{further}
+\appendix
+\lstinputlisting[label=lst:Lens.hs,language=haskell]{source/Full.hs}
 
-% TODO
-% lens laws
-% lens state -> imperative programming
-% partial lenses
-% language support
-% appendix
 
 \end{document}
 
