--- a/composinglenses.tex
+++ b/composinglenses.tex
@@ -65,7 +65,7 @@ Lens Person Address
 \begin{lstlisting}[language=haskell]
 reverseSuburb :: Person -> Person
 reverseSuburb =
-  modify (nameLens >>> suburbLens) reverse
+  modify (addressLens >>> suburbLens) reverse
 \end{lstlisting}
 \item No more code shaped like a Greater Than symbol!
 
