--- a/languagesupport.tex
+++ b/languagesupport.tex
@@ -14,9 +14,9 @@
 
 \begin{itemize}
 \item Boomerang \textemdash A bidirectional programming language for ad-hoc, textual data. 
-\item Roy Programming Language \textemdash Brian McKenna
+\item Roy Programming Language \textemdash Brian McKenna (TBD)
 \item Template Haskell
-\item Your Programming Language
+\item \emph{Your Programming Language}
 \end{itemize}
 
 \end{frame}
