--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usepackage{amsmath}
+\usepackage{cclicenses}
 \usepackage[utf8]{inputenc}
 \usepackage{graphics}
 \usepackage{hyperref}
@@ -35,6 +36,18 @@
   \titlepage
 \end{frame}
 
+\begin{frame}
+\centering
+\emph{This Presentation is Licensed Under:}
+
+Creative Commons Attribution-ShareAlike 3.0 Unported
+
+\href{''http://creativecommons.org/licenses/by-sa/3.0/''}{CC BY-SA 3.0}
+
+\cc \bysa
+
+\end{frame}
+
 \input{coalgebra}
 \input{modifyproblem}
 \input{introducinglenses}
@@ -45,6 +58,8 @@
 \input{further}
 \appendix
 \lstinputlisting[label=lst:Lens.hs,language=haskell]{source/Full.hs}
+\appendix
+\lstinputlisting[label=lst:CC-BY-SA]{CC-BY-SA-3.0}
 
 
 \end{document}
