--- a/languagesupport.tex
+++ b/languagesupport.tex
@@ -4,7 +4,9 @@
 \begin{itemize}
 \item All this boilerplate generating lenses for fields and constructors is a small price
 \item But do we have to pay it?
-\item Can the language do it for us, generating values :: \lstinline$a `Lens` b$ instead of \lstinline$a -> b$?
+\item Can the language do it for us?
+\item We want to generate values with type \lstinline$a `Lens` b$ \ldots
+\item \ldots instead of \lstinline$a -> b$ as in Haskell, Scala and everyone else
 \end{itemize}
 
 \end{frame}
