--- a/asymmetric-lenses.tex
+++ b/asymmetric-lenses.tex
@@ -57,7 +57,7 @@ Creative Commons Attribution-ShareAlike 3.0 Unported
 \input{languagesupport}
 \input{further}
 \appendix
-\lstinputlisting[label=lst:Lens.hs,language=haskell]{source/Full.hs}
+\tiny\lstinputlisting[label=lst:Lens.hs,language=haskell]{source/Full.hs}
 
 \end{document}
 
