--- a/further.tex
+++ b/further.tex
@@ -5,6 +5,7 @@
 \item Lenses with Polymorphic Update
 \item Fusing Lenses on the target to the pair of set/get (Store)
 \item Optimal Integration into a General Purpose Programming Language
+\item Lenses must obey laws
 \end{itemize}
 
 \end{frame}
