--- a/composinglenses.tex
+++ b/composinglenses.tex
@@ -3,7 +3,7 @@
 
 \begin{itemize}
 \item We now have a universal \lstinline[language=haskell]$modify$ function to run with any lens
-\item How do we handled embedded fields?
+\item How do we handle embedded fields?
   \begin{itemize}
   \item A person has an address and an address has a suburb
   \item How can we get to the person's suburb?
